fix tile color on mobile?

--- a/style/main.css
+++ b/style/main.css
@@ -434,7 +434,7 @@ hr {
   transition-property: transform; }
   .tile .tile-inner {
     border-radius: 3px;
-    background: #eee4da;
+    background: #ffcccc;
     text-align: center;
     font-weight: bold;
     z-index: 10;
